automatically create directories for files, html template

--- a/data/templates/tpl.jinja
+++ b/data/templates/tpl.jinja
@@ -2,10 +2,10 @@
 name: {{ name }}
 description: {{ description }}
 vars:
-  - name: ""
-    default: ""
+  - name: "name"
+    default: "default_name"
     ask: true
-    description: ""
+    description: "name of the project"
 steps:
   - name: "create a directory"
     directory: ""
