--- a/data/templates/flask.jinja
+++ b/data/templates/flask.jinja
@@ -3,6 +3,6 @@ app = Flask(__name__)
 
 @app.route('/')
 def hello_world():
-    return 'Hello, World!'
+    return app.send_static_file('index.html')
 
 
